--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 pytest = "^7.3.2"
 coverage = "^7.2.7"
 google-api-python-client = "^2.88.0"
+pytest-cov = "^4.1.0"
 
 
 [build-system]
