--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pytest = "^7.3.2"
 coverage = "^7.2.7"
 google-api-python-client = "^2.88.0"
 pytest-cov = "^4.1.0"
+pytube = "^15.0.0"
 
 
 [build-system]
