--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ coverage = "^7.2.7"
 google-api-python-client = "^2.88.0"
 pytest-cov = "^4.1.0"
 pytube = "^15.0.0"
+youtube-dl = "^2021.12.17"
 
 
 [build-system]
